--- a/pod_project/core/theme/DEFAULT/less/includes/_pod.less
+++ b/pod_project/core/theme/DEFAULT/less/includes/_pod.less
@@ -653,6 +653,10 @@ ul li.vjs-menu-title.vjs-disp-menu-title:hover {
     opacity: .8;
 }
 
+.vjs-error-display {
+    z-index: 1010;
+}
+
 .video-js {
     font-size: 10px !important;
 
